# BASED_BOIS_BASE

./: .gitignore  .gitmodules  LICENSE  README.md
ch3rry/my_piscine/: primitive.c
ch4p0/Libft/: .ft_putnbr.c.swp  Makefile  a.out  ft_atoi.c  ft_bzero.c  ft_itoa.c  ft_memalloc.c  ft_memccpy.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putend.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strcpy.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strmap.c  ft_strncat.c  ft_strncpy.c  ft_strnew.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  libft.h  libft.h.gch  reeadmeee.txt  (+3 more)
fdf/: Makefile  fdf  fdf.c
fillit/: Makefile
ft_printf/: CMakeLists.txt  Makefile
ft_printf/include/: ft_printf.h
ft_printf/src/: pf_put_float.c  pf_put_int.c  pf_put_prefix.c
get_next_line/: Makefile  get_next_line.c  get_next_line.h  main.c
get_next_line2/: get_next_line.h
libft/: Makefile  ft_get_next_line.c  ft_get_next_line.h  ft_itoa.c  ft_printf.c  libft.h  pf_long_math.c  pf_parse.c  pf_put.c  pf_put_char.c  pf_put_empty.c  pf_put_float.c  pf_put_int.c  pf_put_prefix.c  pf_put_ptr.c  pf_put_string.c  pf_strreverse.c  pf_util.c  pf_util_2.c
my_exam/: checkmate.h  failed_cycle_detector.c  failed_options.c  failed_print_memory.c  ft_checkmate.c  ft_cycle_detector.c  ft_inter.c  ft_itoa.c  ft_itoa_base.c  ft_list_remove_if.c  ft_max.c  ft_options.c  ft_print_bits.c  ft_print_memory.c  ft_reverse_bits.c  ft_sort_list.c  ft_swap_bits.c  ft_union.c  last_word.c  list.h
push_swap/: .gitignore  Makefile  README.md
(+240 files in other folders)
